--- a/Circle Shooter.vcxproj.filters
+++ b/Circle Shooter.vcxproj.filters
@@ -90,4 +90,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
 </Project>
